# fogo

./: .gitattributes  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release.yml
scripts/: release-version.sh
src/: cli_args.rs  error.rs  first_run_check.rs  main.rs  settings.rs
src/ui/: help_window.rs
tests/: cli.rs
